adds more scripts and building lambdas packages on iac deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - DEBUG=true
       - DATA_DIR=/tmp/localstack/data
       - PORT_WEB_UI=8080
-      - LAMBDA_EXECUTOR=docker-reuse
+      - LAMBDA_EXECUTOR=docker
       - DOCKER_HOST=unix:///var/run/docker.sock
       - HOST_TMP_FOLDER=${TMPDIR}
     volumes:
